--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Publish GitHub Pages
         uses: peaceiris/actions-gh-pages@v3.9.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GHP_TOKEN }}
           publish_dir: ./_build/html
