--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -29,3 +29,4 @@ jobs:
         with:
           github_token: ${{ secrets.GHP_TOKEN }}
           publish_dir: ./_build/html
+          cname: gcp-ir-notes.silv3rhorn.dev
